/*
 * Copyright (c) Siemens AG 2022 ALL RIGHTS RESERVED.
 */

syntax = "proto3";

package siemens.commondevicemanagement.status.v1;

service DcdStatus {
  rpc GetHealth(HealthRequest) returns (HealthReply) {}
  rpc GetVersion(VersionRequest) returns (VersionReply) {}
}

// Status
message HealthRequest {
}

message HealthReply {
  enum Health {
    HEALTHY = 0;
    UNHEALTHY = 1;
  }
  Health health = 1;
  }


// Version
message VersionRequest {
}

message VersionReply {
  string version = 1;
  string commit = 2;
  string date = 3;
}
